--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,9 @@
     text-align: left;
     font-family: monospace;
 }
+
+input {
+    border-color: black;
+    border-style: solid;
+    border-width: 1px;
+}
